feat:added distance to waste transfer, updated columns + documentation
