# internal/model/converter/waste_transfer_converter.go
@@ -21,7 +21,13 @@ func WasteTransferRequestToSimpleResponse(request *entity.WasteTransferRequest) 
 	if !request.AppointmentDate.IsZero() {
 		appointmentDate = request.AppointmentDate.Format("2006-01-02")
 	}
-
+	var location *model.LocationResponse
+	if request.AppointmentLocation != nil {
+		location = &model.LocationResponse{
+			Latitude:  request.AppointmentLocation.Lat,
+			Longitude: request.AppointmentLocation.Lng,
+		}
+	}
 	return &model.WasteTransferRequestSimpleResponse{
 		ID:                     request.ID.String(),
 		SourceUserID:           request.SourceUserID.String(),
@@ -30,13 +36,17 @@ func WasteTransferRequestToSimpleResponse(request *entity.WasteTransferRequest) 
 		TotalWeight:            request.TotalWeight,
 		TotalPrice:             request.TotalPrice,
 		Status:                 request.Status,
+		ImageURL:               request.ImageURL,
+		Notes:                  request.Notes,
 		SourcePhoneNumber:      request.SourcePhoneNumber,
 		DestinationPhoneNumber: request.DestinationPhoneNumber,
 		AppointmentDate:        appointmentDate,
 		AppointmentStartTime:   startTime,
 		AppointmentEndTime:     endTime,
+		AppointmentLocation:    location,
 		CreatedAt:              &request.CreatedAt,
 		UpdatedAt:              &request.UpdatedAt,
+		Distance:               request.Distance,
 	}
 }
 
@@ -64,7 +74,13 @@ func WasteTransferRequestToResponse(request *entity.WasteTransferRequest) *model
 	if request.DestinationUser.ID != uuid.Nil {
 		destinationUser = UserToResponse(&request.DestinationUser)
 	}
-
+	var location *model.LocationResponse
+	if request.AppointmentLocation != nil {
+		location = &model.LocationResponse{
+			Latitude:  request.AppointmentLocation.Lat,
+			Longitude: request.AppointmentLocation.Lng,
+		}
+	}
 	// Convert items
 	var items []model.WasteTransferItemOfferingResponse
 	for _, item := range request.Items {
@@ -79,15 +95,19 @@ func WasteTransferRequestToResponse(request *entity.WasteTransferRequest) *model
 		TotalWeight:            request.TotalWeight,
 		TotalPrice:             request.TotalPrice,
 		Status:                 request.Status,
+		ImageURL:               request.ImageURL,
+		Notes:                  request.Notes,
 		SourcePhoneNumber:      request.SourcePhoneNumber,
 		DestinationPhoneNumber: request.DestinationPhoneNumber,
 		AppointmentDate:        appointmentDate,
 		AppointmentStartTime:   startTime,
 		AppointmentEndTime:     endTime,
+		AppointmentLocation:    location,
 		CreatedAt:              &request.CreatedAt,
 		UpdatedAt:              &request.UpdatedAt,
 		SourceUser:             sourceUser,
 		DestinationUser:        destinationUser,
 		Items:                  items,
+		Distance:               request.Distance,
 	}
 }
